deploy: d75f70bbb8e82d5b5d4c27f5acbec71ba266795a

--- a/classMySystemHealthy_1_1MySystemHealthyManager.html
+++ b/classMySystemHealthy_1_1MySystemHealthyManager.html
@@ -277,6 +277,8 @@ Private 属性</h2></td></tr>
 <area shape="poly" title=" " alt="" coords="185,164,243,183,268,191,266,196,242,188,184,169"/>
 <area shape="rect" href="classMySystemHealthy_1_1NetInfoTools.html#aa39609741bef5a7e60b2acf97a68d972" title=" " alt="" coords="247,261,445,301"/>
 <area shape="poly" title=" " alt="" coords="158,165,193,205,217,228,244,247,256,253,253,258,241,252,214,232,190,209,154,168"/>
+<area shape="rect" href="classMySystemHealthy_1_1CPUInfoTools.html#ab68a6c38395cdc1056dca6ef4fb7e378" title=" " alt="" coords="497,5,699,45"/>
+<area shape="poly" title=" " alt="" coords="447,23,484,23,484,28,447,28"/>
 </map>
 </div>
 <div class="dynheader">
@@ -365,6 +367,8 @@ Private 属性</h2></td></tr>
 <area shape="poly" title=" " alt="" coords="95,164,153,183,177,191,176,196,151,188,93,169"/>
 <area shape="rect" href="classMySystemHealthy_1_1NetInfoTools.html#aa39609741bef5a7e60b2acf97a68d972" title=" " alt="" coords="157,261,354,301"/>
 <area shape="poly" title=" " alt="" coords="68,165,103,205,127,228,153,247,165,253,162,258,151,252,123,232,99,209,64,168"/>
+<area shape="rect" href="classMySystemHealthy_1_1CPUInfoTools.html#ab68a6c38395cdc1056dca6ef4fb7e378" title=" " alt="" coords="407,5,608,45"/>
+<area shape="poly" title=" " alt="" coords="356,23,393,23,393,28,356,28"/>
 </map>
 </div>
 <div class="dynheader">
