--- a/MyLog_8h.html
+++ b/MyLog_8h.html
@@ -111,24 +111,26 @@ MyLog.h 的引用(Include)关系图:</div>
 <div class="dyncontent">
 <div class="center"><img src="MyLog_8h__dep__incl.png" border="0" usemap="#asrc_2util_2my__log_2MyLog_8hdep" alt=""/></div>
 <map name="asrc_2util_2my__log_2MyLog_8hdep" id="asrc_2util_2my__log_2MyLog_8hdep">
-<area shape="rect" title=" " alt="" coords="440,5,618,31"/>
-<area shape="rect" href="main_8cpp.html" title=" " alt="" coords="463,174,568,199"/>
-<area shape="poly" title=" " alt="" coords="427,27,306,34,177,45,71,61,35,70,16,81,10,90,8,99,10,108,16,117,38,128,80,139,204,157,345,171,463,180,463,185,345,176,203,163,79,144,36,133,12,121,5,110,3,99,5,88,12,77,33,65,69,56,177,40,306,29,427,21"/>
+<area shape="rect" title=" " alt="" coords="552,5,730,31"/>
+<area shape="rect" href="main_8cpp.html" title=" " alt="" coords="572,174,678,199"/>
+<area shape="poly" title=" " alt="" coords="539,24,391,30,227,40,88,57,41,68,16,81,10,90,8,99,10,108,16,117,44,131,98,143,254,162,430,174,572,181,572,186,430,180,254,167,97,148,42,136,13,121,5,110,3,99,5,88,13,77,39,63,87,52,226,35,391,25,539,19"/>
 <area shape="rect" href="PingByCPR_8cpp.html" title=" " alt="" coords="27,79,175,119"/>
-<area shape="poly" title=" " alt="" coords="446,36,188,81,176,84,175,79,187,76,445,30"/>
+<area shape="poly" title=" " alt="" coords="539,33,374,53,188,81,176,84,175,78,187,76,373,48,538,28"/>
 <area shape="rect" href="SimpleTcpClient_8cpp.html" title=" " alt="" coords="200,79,400,119"/>
-<area shape="poly" title=" " alt="" coords="483,38,355,81,354,76,482,33"/>
+<area shape="poly" title=" " alt="" coords="579,36,382,81,381,76,578,31"/>
 <area shape="rect" href="thread__safe__queue_8h.html" title=" " alt="" coords="424,79,634,119"/>
-<area shape="poly" title=" " alt="" coords="532,44,532,79,526,79,526,44"/>
+<area shape="poly" title=" " alt="" coords="615,41,557,81,554,76,612,36"/>
 <area shape="rect" href="MyLog_8cpp.html" title=" " alt="" coords="658,86,850,111"/>
-<area shape="poly" title=" " alt="" coords="575,33,722,83,720,88,574,38"/>
+<area shape="poly" title=" " alt="" coords="670,36,739,84,736,88,667,41"/>
 <area shape="rect" href="SoftHealthMonitorManager_8cpp.html" title=" " alt="" coords="874,79,1101,119"/>
-<area shape="poly" title=" " alt="" coords="609,30,878,76,877,81,609,36"/>
-<area shape="rect" href="MySystemHealthyManager_8h.html" title=" " alt="" coords="1126,79,1396,119"/>
-<area shape="poly" title=" " alt="" coords="632,26,1113,76,1126,77,1125,83,1113,81,631,32"/>
-<area shape="poly" title=" " alt="" coords="1112,121,569,182,568,177,1111,116"/>
-<area shape="rect" href="MySystemHealthyManager_8cpp.html" title=" " alt="" coords="1118,167,1404,207"/>
-<area shape="poly" title=" " alt="" coords="1264,133,1264,166,1258,166,1258,133"/>
+<area shape="poly" title=" " alt="" coords="705,31,905,76,904,81,704,36"/>
+<area shape="rect" href="CPUInfoTools_8cpp.html" title=" " alt="" coords="1125,79,1320,119"/>
+<area shape="poly" title=" " alt="" coords="744,28,1113,76,1125,78,1124,83,1113,81,743,34"/>
+<area shape="rect" href="MySystemHealthyManager_8h.html" title=" " alt="" coords="1344,79,1615,119"/>
+<area shape="poly" title=" " alt="" coords="744,24,1010,46,1332,76,1344,77,1344,83,1331,81,1010,51,743,30"/>
+<area shape="poly" title=" " alt="" coords="1331,121,953,159,678,184,678,178,952,154,1330,116"/>
+<area shape="rect" href="MySystemHealthyManager_8cpp.html" title=" " alt="" coords="1337,167,1622,207"/>
+<area shape="poly" title=" " alt="" coords="1482,133,1482,166,1477,166,1477,133"/>
 </map>
 </div>
 </div>
