--- a/main_8cpp.html
+++ b/main_8cpp.html
@@ -229,7 +229,7 @@ main.cpp 的引用(Include)关系图:</div>
 <area shape="rect" href="classMySystemHealthy_1_1MySystemHealthyManager.html#a213d85ed6c3dae2bcb67e2d082e7c753" title=" " alt="" coords="108,55,327,95"/>
 <area shape="poly" title=" " alt="" coords="33,273,39,239,52,194,73,147,88,125,106,105,112,101,115,105,110,109,92,128,78,149,57,196,44,240,38,274"/>
 <area shape="rect" href="classDeviceOnlineMonitor.html#aff66b18abb127176950a889d0546fb3d" title=" " alt="" coords="138,119,297,159"/>
-<area shape="poly" title=" " alt="" coords="36,272,61,222,81,194,106,169,124,158,127,163,110,173,85,197,66,225,41,274"/>
+<area shape="poly" title=" " alt="" coords="37,272,61,223,81,195,106,171,124,160,127,164,110,175,85,198,66,226,41,274"/>
 <area shape="rect" href="namespaceMyLog.html#a73c0d376cd255b98e8cadb01e6cf45c7" title=" " alt="" coords="170,184,265,209"/>
 <area shape="poly" title=" " alt="" coords="43,271,70,245,107,220,155,203,157,208,109,224,74,249,47,275"/>
 <area shape="rect" href="classMySystemHealthy_1_1MySystemHealthyManager.html#a42f202086b1f8408080c9b979ccc1f14" title=" " alt="" coords="108,234,327,274"/>
@@ -239,7 +239,7 @@ main.cpp 的引用(Include)关系图:</div>
 <area shape="rect" href="classArgumentParser.html#a52ce39cf5bee3972451b42a670ca3aa3" title=" " alt="" coords="132,363,303,388"/>
 <area shape="poly" title=" " alt="" coords="47,297,74,323,109,348,129,356,126,361,107,352,70,327,43,301"/>
 <area shape="rect" href="classArgumentParser.html#ac4cbe4e1edc452f402863c02e7dbe641" title=" " alt="" coords="120,412,315,437"/>
-<area shape="poly" title=" " alt="" coords="41,298,65,347,85,374,110,397,121,404,119,409,106,401,81,378,61,350,36,300"/>
+<area shape="poly" title=" " alt="" coords="41,298,65,348,85,375,110,399,118,404,115,408,106,403,81,379,60,350,36,300"/>
 <area shape="rect" href="classDeviceOnlineMonitor.html#a60de64d75454385b23995437f1d72669" title=" " alt="" coords="138,462,297,502"/>
 <area shape="poly" title=" " alt="" coords="39,298,46,329,59,369,80,412,110,448,127,460,124,464,106,452,75,415,54,371,40,330,33,299"/>
 <area shape="rect" href="classDeviceOnlineMonitor.html#a8c528baf37154d347366083f0f816846" title=" " alt="" coords="138,526,297,566"/>
@@ -256,6 +256,8 @@ main.cpp 的引用(Include)关系图:</div>
 <area shape="poly" title=" " alt="" coords="567,271,650,292,649,297,566,277"/>
 <area shape="rect" href="classMySystemHealthy_1_1NetInfoTools.html#aa39609741bef5a7e60b2acf97a68d972" title=" " alt="" coords="646,362,843,402"/>
 <area shape="poly" title=" " alt="" coords="515,272,572,310,642,348,659,355,657,360,640,352,570,314,512,277"/>
+<area shape="rect" href="classMySystemHealthy_1_1CPUInfoTools.html#ab68a6c38395cdc1056dca6ef4fb7e378" title=" " alt="" coords="896,106,1097,146"/>
+<area shape="poly" title=" " alt="" coords="846,123,882,123,882,129,846,129"/>
 <area shape="rect" href="classDeviceOnlineMonitor.html#a70a4677f113e64393ea51d131e5b4391" title=" " alt="" coords="405,462,563,502"/>
 <area shape="poly" title=" " alt="" coords="297,479,391,479,391,485,297,485"/>
 <area shape="rect" href="classDeviceOnlineMonitor.html#ad074c174ce59c112ba75f34e83f08794" title=" " alt="" coords="665,462,824,502"/>
